@@ -32,6 +32,11 @@
       of unicode situations that occur in db's such as MS-SQL to be
       better handled and allows subclassing of the Unicode datatype.
       [ticket:522]
+    - the "where" criterion of an update() and delete() now correlates
+      embedded select() statements against the table being updated or
+      deleted.  this works the same as nested select() statement
+      correlation, and can be disabled via the correlate=False flag on 
+      the embedded select().
     - column labels are now generated in the compilation phase, which
       means their lengths are dialect-dependent.  So on oracle a label
       that gets truncated to 30 chars will go out to 63 characters
